# ML-Model-CI

./: .codacy.yml  .dockerignore  .flake8  .fossa.yml  .gitignore  .travis.yml  CHANGELOG.md  CHINESE_README.md  CONTRIBUTING.md  README.md  README_zh_CN.md  environment.yml  playground_convert.py  pure_requires.yml  pyproject.toml  register_convert_diagnose_deploy.md  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cli/: ui.py
docker/: Dockerfile  Dockerfile.cpu_base  cpu.Dockerfile  cuda10.2.Dockerfile  docker-compose-cpu-modelhub.yml  docker-compose-cuda10.2-modelhub.yml  docker-compose-gpu-modelhub.yml  frontend.Dockerfile  gpu.Dockerfile
env-file/: advisor.env
example/: Test_torchfamily.yml  alexnet.yml  register_resnet50_pytorch.yml  resnet50.yml  resnet50_explicit_path.yml  resnet50_implicit_path.yml  resnet50_torchscript.yml  retinanet.yml  sample_k8s_deployemnt.config  sample_k8s_deployment.conf  sample_mrcnn.py  sample_profile.py
frontend/: .eslintignore  .eslintrc.js  .prettierrc.js  .stylelintignore  .stylelintrc.js  README.md  build.json  package-lock.json  package.json  tsconfig.json
integration/: README.md
intergration/: README.md
modelci/: __init__.py  cli.py  client.py  common.py  config.py  env-backend.env  env-frontend.env  env-mongodb.env  init-mongo.sh  runs.py  test_tensorflow_conversion.py  ui.py
ops/: README.md  start_node_exporter.sh  stop_node_exporter.sh
scripts/: generate_env.py  init_db.js  install.conda_env.sh  install.pull_docker_images.sh  install.sh  (+10 more)
(+322 files in other folders)
