[metadata]
name = modelci
version = 1.0.0
author = NTU CAP
author_email = huaizhen001@e.ntu.edu.sg
description = A complete platform for managing, converting, profiling, and deploying models as cloud services (MLaaS)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cap-ntu/ML-Model-CI
project_urls =
    Bug Tracker = https://github.com/cap-ntu/ML-Model-CI/issues
license_file = LICENSE


[options]
python_requires =
    >=3.6